<resources>
    <string name="app_name">Proyecto Foro</string>
    <string name="mssg1">Bienvenido a Intelli Inc.</string>

    <!--navigation_menu (sidebar)-->
    <string name="welcomeActivity">Inicio</string>
    <string name="myBlogs">Mis foros</string>
    <string name="logout">Cerrar sesión </string>
        <!--Only for admin-->
    <string name="denyAccess">Restringir acceso</string>

    <!--    Activity Register    -->
    <string name="email">Correo electrónico</string>
    <string name="password">Contraseña</string>
    <string name="login">Entrar</string>
    <string name="name">Nombre</string>
    <string name="lastN">Apellidos</string>
    <string name="registry">Registrar</string>
<<<<<<< HEAD
    <string name="blogTitulo">Blog</string>
    <string name="contenidoForo">Contenido Del Foro</string>
    <string name="seccionComentarios">Seccion De Comentarios</string>
    <string name="dejarComentario">Escriba un comentario</string>
    <string name="comentar">Comentar</string>
    <string name="Reportar">Reportar</string>
    <string name="blogTitulo2">Nuevo Blog</string>
    <string name="Titulo">Titulo del Blog</string>
    <string name="Contenido">Contenido</string>
    <string name="Subir">Subir</string>
=======

    <!--    Activity Blog    -->
    <string name="edtComentario">Dejar un Comentario</string>
    <string name="btnComentar">Comentar</string>
    <string name="tvTituloForo">Título del Foro</string>
    <string name="edtPregunta">Contenido del foro</string>
    <string name="btnReportar">Reportar Usuario</string>

    <!--    Activity Ban    -->
    <string name="tvTituloBan">Usuarios Reportados</string>
    <string name="btnQuitarReporte">Quitar reporte</string>
    <string name="btnBloquear">Bloquear</string>

    <!--    Activity Blog    -->
    <string name="tituloBolg">BLOG</string>
    <string name="contenidoBlog">Contenido del Foro</string>
    <string name="seccionComentarios">Seccion de comentarios</string>
    <string name="dejarComentario">Dejar un comentario</string>
    <string name="reportarUsuario">Reportar Usuario</string>
    <string name="comentar">Comentar</string>

    <!--    Activity New Blog    -->
    <string name="nuevoBlog">Nuevo Foro</string>
    <string name="tituloNewBlog">Escribe El Titulo Del Blog</string>
    <string name="contenidoNewBlog">Contenido Del Foro</string>
    <string name="subirBlog">Subir Foro</string>

    <!--    Activity My Blogs    -->
    <string name="misBlog">Mis Blogs</string>
    <string name="buscarForo">Buscar Foro</string>
    <string name="pregunta1">Pregunta 1</string>
    <string name="temaInteres1">Tema de interes</string>
    <string name="duda2">Duda 2</string>
    <string name="crearForo">Crear foro</string>

    <string name="ip">https://gadvnautica.000webhostapp.com/pregunta.php</string>
</resources>