<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".myBlog">

    <TextView
        android:id="@+id/misBlog"
        android:layout_width="156dp"
        android:layout_height="50dp"
        android:layout_marginTop="80dp"
        android:text="@string/misBlog"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="117dp" />

    <Button
        android:id="@+id/buscarForo"
        android:layout_width="181dp"
        android:layout_height="37dp"
        android:layout_marginTop="56dp"
        android:text="@string/buscarForo"
        app:layout_constraintTop_toBottomOf="@+id/misBlog"
        tools:layout_editor_absoluteX="59dp" />

    <TextView
        android:id="@+id/pregunta1"
        android:layout_width="131dp"
        android:layout_height="63dp"
        android:layout_marginTop="52dp"
        android:text="@string/pregunta1"
        app:layout_constraintTop_toBottomOf="@+id/buscarForo"
        tools:layout_editor_absoluteX="59dp" />

    <TextView
        android:id="@+id/temaInteres1"
        android:layout_width="131dp"
        android:layout_height="62dp"
        android:layout_marginTop="36dp"
        android:text="@string/temaInteres1"
        app:layout_constraintTop_toBottomOf="@+id/pregunta1"
        tools:layout_editor_absoluteX="59dp" />

    <TextView
        android:id="@+id/duda2"
        android:layout_width="132dp"
        android:layout_height="72dp"
        android:layout_marginTop="24dp"
        android:text="@string/duda2"
        app:layout_constraintTop_toBottomOf="@+id/temaInteres1"
        tools:layout_editor_absoluteX="59dp" />

    <Button
        android:id="@+id/crearForo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/crearForo"
        app:layout_constraintTop_toBottomOf="@+id/duda2"
        tools:layout_editor_absoluteX="227dp" />
</androidx.constraintlayout.widget.ConstraintLayout>