<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MyBlogsActivity">

    <TextView
        android:id="@+id/misBlogs"
        android:layout_width="126dp"
        android:layout_height="42dp"
        android:layout_marginTop="100dp"
        android:text="@string/misBlog"
        android:textSize="24sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/buscarBlog"
        android:layout_width="155dp"
        android:layout_height="38dp"
        android:layout_marginTop="52dp"
        android:text="@string/buscarForo"
        app:layout_constraintTop_toBottomOf="@+id/misBlogs"
        tools:layout_editor_absoluteX="67dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/pregunta1"
        android:layout_width="140dp"
        android:layout_height="58dp"
        android:layout_marginTop="36dp"
        android:text="@string/pregunta1"
        app:layout_constraintTop_toBottomOf="@+id/buscarBlog"
        tools:layout_editor_absoluteX="67dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/temaInteres1"
        android:layout_width="140dp"
        android:layout_height="63dp"
        android:layout_marginTop="12dp"
        android:text="@string/temaInteres1"
        app:layout_constraintTop_toBottomOf="@+id/pregunta1"
        tools:layout_editor_absoluteX="67dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/duda2"
        android:layout_width="143dp"
        android:layout_height="59dp"
        android:layout_marginTop="12dp"
        android:text="@string/duda2"
        app:layout_constraintTop_toBottomOf="@+id/temaInteres1"
        tools:layout_editor_absoluteX="67dp"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/crearForo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="84dp"
        android:text="@string/crearForo"
        app:layout_constraintTop_toBottomOf="@+id/duda2"
        tools:layout_editor_absoluteX="249dp"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>