<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".newblog">

    <TextView
        android:id="@+id/Contenido"
        android:layout_width="244dp"
        android:layout_height="201dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="32dp"
        android:text="@string/Contenido"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Titulo" />

    <TextView
        android:id="@+id/Titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:text="@string/Titulo"
        app:layout_constraintTop_toBottomOf="@+id/blogTitulo2"
        tools:layout_editor_absoluteX="72dp" />

    <TextView
        android:id="@+id/blogTitulo2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/blogTitulo2"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="166dp" />

    <Button
        android:id="@+id/Subir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="224dp"
        android:layout_marginTop="48dp"
        android:text="@string/Subir"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Contenido" />
</androidx.constraintlayout.widget.ConstraintLayout>