<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutManager"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/material_dynamic_neutral80">

    <ImageView
        android:id="@+id/img2"
        android:layout_width="149dp"
        android:layout_height="140dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.071"
        tools:srcCompat="@mipmap/ic_launcher_round" />

    <TextView
        android:id="@+id/txtTitle2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Bienvenido, manager a Intelli Inc."
        android:textSize="24sp"
        tools:layout_editor_absoluteX="22dp"
        tools:layout_editor_absoluteY="217dp" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="96dp"
        tools:layout_editor_absoluteY="271dp" />

    <EditText
        android:id="@+id/edtLastN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/lastN"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="334dp" />

    <EditText
        android:id="@+id/edtEmail2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="392dp" />

    <EditText
        android:id="@+id/edtPassword2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPersonName"
        tools:layout_editor_absoluteX="100dp"
        tools:layout_editor_absoluteY="450dp" />

    <Button
        android:id="@+id/btnRegistry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#094173"
        android:text="@string/registry"
        tools:layout_editor_absoluteX="103dp"
        tools:layout_editor_absoluteY="521dp" />

</androidx.constraintlayout.widget.ConstraintLayout>